[package]
name = "ripple-tx-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
backoff = "0.4"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
futures-util = "0.3"
lazy_static = "1.4"
ratatui = "0.24"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"