[package]
name = "ripple-tx-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
backoff = "0.4"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
futures-util = "0.3"
lazy_static = "1.4"
native-tls = "0.2"
ratatui = "0.24"
regex = "1.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"
tempfile = "3"
tungstenite = "0.21"

[[bin]]
name = "deepseek_status"
path = "src/deepseek_status.rs"

[[bin]]
name = "wallet_details"
path = "src/wallet_details.rs"

[[bin]]
name = "wallet_deepseek_analyzer"
path = "src/wallet_deepseek_analyzer.rs"